--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@earvin.dev/changelog",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Changelog Keeper",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "publish": "npm publish --access-public"
   },
   "keywords": [
     "changelog.sh",
