--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "node ./dist/index.js",
     "build": "tsc",
     "test": "jest",
-    "publish": "npm publish --access-public"
+    "publish": "npm run build && npm publish --access-public"
   },
   "keywords": [
     "changelog.sh",
