--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/gradient-string": "^1.1.2",
     "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.2"
   },
