--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "typescript": "^4.9.5"
   },
   "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
+    "transform": { "^.+\\.tsx?$": ["ts-jest", {"rootDir": "."}] },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
